--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "tone": "^14.7.77",
     "typescript": "^4.9.5",
+    "use-resize-observer": "^9.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
