--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,18 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es2015" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    "module": "esnext" /* Specify what module code is generated. */,
+    "target": "es2019" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "module": "commonjs" /* Specify what module code is generated. */,
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     "isolatedModules": true /* Ensure that each file can be safely transpiled without relying on other imports. */,
-    "resolveJsonModule": true /* Enable importing .json files with ES module syntax. */,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
+    "lib": ["es2019"] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-    "jsx": "react-jsx" /* Specify what JSX code is generated. */,
+    "outDir": "./dist",
+    "rootDir": "./src",
     "useUnknownInCatchVariables": true /* Default catch clause variables as 'unknown' instead of 'any'. */,
     "allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
     "allowSyntheticDefaultImports": true /* Allow 'import x from y' when a module doesn't have a default export. */,
@@ -32,5 +28,7 @@
     "noEmit": true /* Disable emitting files from a compilation. */,
     "typeRoots": ["node_modules/@types"] /* Specify multiple folders that act like './node_modules/@types'. */
   },
-  "include": ["src"]
+
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
