--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 /coverage
 
 # production
-/build
+/client/build
+/server/dist
 
 # misc
 .DS_Store
@@ -19,6 +20,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/server/.env
 
 npm-debug.log*
 yarn-debug.log*
