--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "Frontend for the We-Midi application",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.0.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "aws-amplify": "^6.0.9",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
