--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /client/node_modules
 /server/node_modules
+/lambda/*/node_modules
 /.pnp
 .pnp.js
 
@@ -21,6 +22,7 @@
 .env.test.local
 .env.production.local
 /server/.env
+/lambda/*/*.zip
 
 npm-debug.log*
 yarn-debug.log*
