--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "author": "Asaf Hod",
   "license": "ISC",
   "dependencies": {
+    "aws-jwt-verify": "^4.0.0",
+    "aws-sdk": "^2.1525.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
