--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "description": "Backend for the We-Midi application",
   "private": true,
-  "main": "src/app.ts",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "dev": "nodemon src/app.ts",
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon src/server.ts",
     "build": "tsc"
   },
   "author": "Asaf Hod",
