--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "description": "Backend for the We-Midi application",
   "private": true,
-  "main": "src/server.ts",
+  "main": "src/app.ts",
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "dev": "nodemon src/server.ts",
+    "start": "ts-node src/app.ts",
+    "dev": "nodemon src/app.ts",
     "build": "tsc"
   },
   "author": "Asaf Hod",
@@ -17,12 +17,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.3",
+    "@types/ws": "^8.5.10",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
