--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -30,5 +30,6 @@
   },
 
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "files": ["src/types/custom.d.ts"]
 }
